# adsb-feeder-image

./: .gitignore  .gitmodules  CODE_REVIEW_TODOS.md  CONFIGURABLE_PATHS.md  CONTRIBUTING.md  Makefile  README-SDR-feature-matrix.md  README.md  image-warning.md  pyproject.toml  pytest.ini  release-notes.md
.github/: FUNDING.yml
.github/scripts/: qemu-run.sh
.github/workflows/: asus-tinkerboard.yml  banana-pi-m5-and-m2p.yml  build-images-on-arm.yml  build-images.yml  le-potato.yml  manual.yml  odroid-c4.yml  orange-pi-4-and-lts.yml  orange-pi-5-and-5b.yml  python-lint.yml  raspberry-pi-32-bit.yml  raspberry-pi-64-bit.yml  rockpi4.yml  smoketest.yml  test.yml
docs/plans/: 2025-10-25-github-test-results-reporting-design.md
src/: 0001-allow-running-natively-on-x86_64.patch  0002-reduce-space-used-when-running-in-GitHub-action.patch  0003-don-t-try-to-configure-wifi-if-it-isn-t-there.patch  0004-ensure-we-have-working-name-resolution-in-the-chroot.patch  build_dist  config  config.diet  config.x86_64  get_version.sh
src/modules/adsb-docker/: docker-install.sh  start_chroot_script
src/modules/adsb-feeder/: config  end_chroot_script  start_chroot_script
src/modules/adsb-pi-setup/: start_chroot_script  todo
src/modules/adsb_docker/: docker-install.sh
src/modules/copy-kernel/: start_chroot_script
src/modules/lepotato-raspbian/: config  end_chroot_script  start_chroot_script
src/tools/: .env.example  DEPLOYMENT.md  Makefile  README-API-Service.md  adsb-test-service.py  adsb-test-service.service  app-install.sh  build-local.sh  create-changelog.sh  debug-js-transitions.py  get-changelog.sh  install-service.sh  maketag  pve-vmcreate.sh  remote-deploy-test-services.sh  safe-get-version.sh  setup-tftp-iscsi.sh  test-feeder-image.py  update-secrets.sh
src/tools/automated-boot-testing/: .gitignore  README-API-Service.md  README-BootTestingService.md  README.md  adsb-boot-test-service.py  adsb-boot-test.service  adsb-test-service.py  adsb-test-service.service  analyze-js-behavior.py  boot-test-metrics-cli.py  config.json.example  debug-js-transitions.py  generate-api-key.py  install-service.sh  manual-test.py  metrics.py  migrate_metrics_db.py  power-toggle-kasa.py  power-toggle-unifi.py  requirements.txt  restore-image.py  run-selenium-as-testuser.py  run-selenium-test.py  run_selenium_test.py  serial_console_reader.py  setup-dev.sh  setup-tftp-iscsi.sh  test-api.py  test-auth-logic.py  test-authentication.py  test-browser-api.sh  test-feeder-image.py  test-input-validation.py  test-vm-image.py  test_boot_service_security.py  test_duplicate_detection.py  test_metrics.py  test_serial_console_reader.py
src/tools/github-reporter/: README-reporter-setup.md  deploy-reporter.sh  github-reporter.service.example  github_reporter.py  requirements-reporter.txt  test_reporter_integration.py
src/tools/github-webhook/: README-github-reporting.md  README.md  apache2-example.conf  deploy-reporter.sh  deploy.sh  github-webhook.service  github_reporter.py  requirements.txt  secrets.env.example  setup_venv.sh  test_filter.py  test_reporter_integration.py  test_webhook.py  test_webhook_security.py  webhook_service.py
src/variants/armbian/: config  pre_chroot_script
src/variants/armbian-root2/: config  pre_chroot_script
src/variants/armbian-root3/: config  pre_chroot_script
src/variants/dietarmbian/: config
src/variants/dietpi-root1/: config
src/variants/dietpi-trailing-fat/: dietpi.txt  (+1 more)
tests/: README.md  TESTING.md  TEST_COVERAGE_PLAN.md  TEST_STATUS.md  __init__.py  conftest.py  requirements.txt  run_tests.py  test_fixture_setup.py
tests/integration/: test_system_integration.py
tests/unit/: test_aggregators.py  test_app.py  test_config.py  test_data.py  test_environment.py  test_flask.py  test_netconfig.py  test_paths.py  test_sdr.py  test_system.py  test_util.py  test_wifi.py
(+280 files in other folders)
