[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 130
extend-exclude = '''
/(
  | src/modules/adsb-feeder/filesystem/root/opt/adsb/extras/.*\.py
)/
'''

[tool.ruff]
line-length = 130
target-version = "py38"
exclude = [
    "src/modules/adsb-feeder/filesystem/root/opt/adsb/extras/*.py",
]

[tool.ruff.lint]
# Enable pycodestyle (E, W), pyflakes (F), and isort (I) by default
select = ["E", "W", "F", "I"]
# Ignore
#       line too long (E501)
#       whitespace before ':' (E203)
#       f-string without placeholders (F541)
#       type-comparison (E721)
#       comparison to None (E711)
ignore = ["E501", "E203", "F541", "E721", "E711"]

[tool.pylint.format]
max-line-length = 130

[tool.flake8]
# Ignore
#       line too long (E501)
#       whitespace before ':' (E203)
#       f-string without placeholders (F541)
#       type-comparison (E721)
#       comparison to None (E711)
extend-ignore = "E501,E203,F541,E721,E711"

[tool.mypy]
check_untyped_defs = true
exclude = [
    "src/modules/adsb-feeder/filesystem/root/opt/adsb/extras/.*\\.py$",
]
[[tool.mypy.overrides]]
module = "metrics"
ignore_missing_imports = true

[project]
name = "adsb-feeder-image"
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "djlint",
    "Flask",
    "humanize",
    "requests",
    "shapely",
    "types-requests",
    "types-shapely",
    "cryptography"
]

[dependency-groups]
dev = [
    "black>=24.8.0",
    "coverage>=7.6.1",
    "flake8>=5.0.4",
    "Flask>=3.1.0",
    "mccabe>=0.7.0",
    "mypy>=1.14.1",
    "mypy-extensions>=1.1.0",
    "pycodestyle>=2.9.1",
    "pyflakes>=2.5.0",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.1",
    "ruff>=0.14.1",
    "typing-extensions>=4.13.2",
]
tools = [
    "aiohttp",
    "FastAPI",
    "PyGithub",
    "pyserial",
    "python-kasa",
    "selenium",
    "slowapi",
    "uvicorn",
    "types-pyserial",
]

[tool.setuptools_scm]
# Derive version from git tags

